added style to bookish.html

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -16,7 +16,7 @@
             <svg class="svg-logo" width="225" height="100" xmlns="http://www.w3.org/2000/svg">
     
                 <!-- Initials -->
-                <a href="">
+                <a href="/index.html">
                     <text class="logo" x="50%" y="50%" font-family="Arial, sans-serif" font-size="32" font-weight="bold" fill="#333" text-anchor="middle" dominant-baseline="middle">
                         <!-- &lt; Leo Alferez &gt; -->
                         { Leo Alferez }
@@ -25,7 +25,7 @@
               </svg>
               
             <ul class="navbar-items">
-                <li><a class="navbar-links" href="#">Home</a></li>
+                <li><a class="navbar-links" href="/index.html">Home</a></li>
                 <li><a class="navbar-links" href="#">About me</a></li>
                 <li><a class="navbar-links" href="#">Projects</a></li>
                 <li><a class="navbar-links" href="#">Experience</a></li>
