--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-      
     <title>{{ Home }}</title>
 </head>
 <body>
 
 
+    <div class="navbar-container">
         <nav class="navbar">
             <svg class="svg-logo" width="225" height="100" xmlns="http://www.w3.org/2000/svg">
     
@@ -26,14 +28,14 @@
               
             <ul class="navbar-items">
                 <li><a class="navbar-links" href="/index.html">Home</a></li>
-                <li><a class="navbar-links" href="#">About me</a></li>
-                <li><a class="navbar-links" href="#">Projects</a></li>
-                <li><a class="navbar-links" href="#">Experience</a></li>
-                <li><a class="navbar-links" href="#">Resume</a></li>
+                <li> <a class="card-link" href="/bookish/">Current Project</a></li>
+                <li><a class="navbar-links" href="/assets/ALFEREZ_05_11_2025_.pdf" target="_blank">Resume</a></li>
             </ul>
+            
         </nav>
-
-
+        <hr class="separator">
+    </div>
+       
 
     {{ content | safe }}
 
