second try to deploy

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -18,7 +18,7 @@
             <svg class="svg-logo" width="225" height="100" xmlns="http://www.w3.org/2000/svg">
     
                 <!-- Initials -->
-                <a href="{{ '/index.html' | url }}"></a>
+                <a href="{{ '/index.html' | url }}">
                     <text class="logo" x="50%" y="50%" font-family="Arial, sans-serif" font-size="32" font-weight="bold" fill="#333" text-anchor="middle" dominant-baseline="middle">
                         <!-- &lt; Leo Alferez &gt; -->
                         { Leo Alferez }
