--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ 'https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' | url }}" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="{{ 'https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' | url }}" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ '/styles/layout.css' | url }}">
-    <link rel="preconnect" href="{{ 'https://rsms.me/' | url }}">
-    <link rel="stylesheet" href="{{ 'https://rsms.me/inter/inter.css' | url }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="preconnect" href="https://rsms.me/">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <title>{{ Home }}</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
             <svg class="svg-logo" width="225" height="100" xmlns="http://www.w3.org/2000/svg">
     
                 <!-- Initials -->
-                <a href="{{ '/index.html' | url }}">
+                <a href="/index.html"></a>
                     <text class="logo" x="50%" y="50%" font-family="Arial, sans-serif" font-size="32" font-weight="bold" fill="#333" text-anchor="middle" dominant-baseline="middle">
                         <!-- &lt; Leo Alferez &gt; -->
                         { Leo Alferez }
@@ -27,9 +27,9 @@
               </svg>
               
             <ul class="navbar-items">
-                <li><a class="navbar-links" href="{{ '/index.html' | url }}">Home</a></li>
-                <li><a class="card-link" href="{{ '/bookish/' | url }}">Current Project</a></li>
-                <li><a class="navbar-links" href="{{ '/assets/ALFEREZ_05_11_2025_.pdf' | url }}" target="_blank">Resume</a></li>
+                <li><a class="navbar-links" href="/index.html">Home</a></li>
+                <li><a class="card-link" href="/bookish/">Current Project</a></li>
+                <li><a class="navbar-links" href="/assets/ALFEREZ_05_11_2025_.pdf" target="_blank">Resume</a></li>
             </ul>
             
         </nav>
