--- a/styles/core_style.css
+++ b/styles/core_style.css
@@ -121,6 +121,8 @@ h1 {
     border-radius: 5px;
     gap: 0.5rem;
     color: var(--h3-subtitle-color);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .skills li:hover {
