--- a/src/styles/core_style.css
+++ b/src/styles/core_style.css
@@ -62,8 +62,10 @@ body {
 }
 
 
-h1 {
+#welcome-message {
     margin-bottom: 5rem;
+    margin-top: 3rem;
+    text-align: center;
 }
 
 
@@ -92,7 +94,6 @@ h1 {
 
 .section {
     width: 30vw;
-    margin-top: 5rem;
     margin-bottom: 1rem;
 }
 
@@ -150,3 +151,18 @@ h1 {
     border-radius: 5px;
 }
 
+@media (max-width:  35rem){
+    .main-container {
+        width: auto;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+
+    .section {
+        width: 100%;
+    }
+
+    h1 {
+        text-align: center;
+    }
+}
