added mobile style for bookish page

--- a/src/bookish.njk
+++ b/src/bookish.njk
@@ -7,9 +7,7 @@ layout: layout.njk
     <link rel="stylesheet" href="/styles/bookish.css">
 </head>
 
-<main class="bookish-container">
-    <div class="first-column">
-    </div>
+<main>
 
     <div class="bookish-card-container">
         <div>
@@ -23,7 +21,7 @@ layout: layout.njk
 
         <div class="general-card-layout">
             <header>
-                <h2>What is bookish? 📚</h2>
+                <h2>What is Bookish? 📚</h2>
             </header>
             <div class="answer">
                 <h3>Description:</h3>
@@ -169,5 +167,5 @@ layout: layout.njk
 
     </div>
 
-    <div class="last-column"></div>
+    
 </main>
