added more style to mobile

--- a/src/bookish.njk
+++ b/src/bookish.njk
@@ -14,7 +14,7 @@ layout: layout.njk
             <h1>Bookish</h1>
            <div>
                 <img class="logo" src="/assets/github-mark-white.png" alt="">
-                <a href="https://github.com/LimitsAtInfinity01/django_book_search_app/tree/master" target="_blank">Project's Repository</a>
+                <a href="https://github.com/LimitsAtInfinity01/django_book_search_app/tree/master" target="_blank">Visit the repository</a>
            </div>
         </div>
  
